// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Notification /> it renders colored Notification with Props 1`] = `
<Tile
  className="mfui-beta-notification mfui-beta-notification_type_error mfui-beta-notification_colored notification"
  radius="rounded"
  shadowLevel="hover"
>
  <div
    className="mfui-beta-notification__container"
  >
    <div
      className="mfui-beta-notification__icon-container"
    >
      <test-file-stub />
    </div>
    <div
      className="mfui-beta-notification__content"
    >
      <Header
        as="h5"
        className="mfui-beta-notification__title"
        color="black"
        hAlign="inherit"
      >
        title
      </Header>
      <p
        className="mfui-beta-notification__text"
      >
        content
      </p>
    </div>
  </div>
</Tile>
`;

exports[`<Notification /> renders component 1`] = `
<Tile
  className="mfui-beta-notification mfui-beta-notification_type_info mfui-beta-notification_colored"
  radius="rounded"
  shadowLevel="zero"
>
  <div
    className="mfui-beta-notification__container"
  >
    <div
      className="mfui-beta-notification__icon-container"
    >
      <test-file-stub />
    </div>
    <div
      className="mfui-beta-notification__content"
    >
      <p
        className="mfui-beta-notification__text"
      >
        content
      </p>
    </div>
  </div>
</Tile>
`;
